--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,7 +16,18 @@ body {
     text-decoration: none;
 }
 
-a{
+:root {
+    scroll-behavior: slow;
+}
+
+
+html,
+body {
+    scrollbar-width: thin;
+    scrollbar-color: $lime-green black;
+}
+
+a {
     text-decoration: none;
     color: $lime-green;
 }
@@ -25,6 +36,7 @@ a{
     margin: 20px;
     width: 75%;
 }
+
 // text colors
 
 span {
@@ -35,11 +47,15 @@ span {
     color: $lime-green;
 }
 
-.red-text{
+.red-text {
     color: red;
 }
 
-.white-text{
+.yellow-text {
+    color: yellow;
+}
+
+.white-text {
     color: $white;
 }
 
@@ -62,6 +78,7 @@ input[type=text] {
     font-family: $source-code-pro-font;
     font-weight: 400;
     font-size: 1rem;
+    width: 75%;
 
     &:focus {
         outline: none;
