--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -79,6 +79,7 @@ input[type=text] {
     font-weight: 400;
     font-size: 1rem;
     width: 75%;
+    font-weight: 600;
 
     &:focus {
         outline: none;
