--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -33,9 +33,9 @@ a {
 }
 
 .main {
-    margin: auto;
-    width: 100%;
-    height: 100vh;
+    margin: 15px auto;
+    width: 99%;
+    height: 95vh;
     border:2px solid $lime-green;
     border-radius: 8px;
     overflow: hidden;
