Minor styling updates and new colors

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,4 +2,6 @@
 
 $lime-green : #32CD32;
 $white: #F7F7F7;
+$bright-blue: #0096FF;
+$bright-purple: #BF40BF;
 $source-code-pro-font : 'Source Code Pro', monospace;
