--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,4 +4,12 @@ $lime-green : #32CD32;
 $white: #F7F7F7;
 $bright-blue: #0096FF;
 $bright-purple: #BF40BF;
+$navy : #00425A;
+$orange : #FC7300;
+$yellow : #F8B400;
+$off-white : #F8F1F1;
+$teal : #125B50;
+$electric-green : #BFDB38;
+$pink-red: #FF6363;
+$brown : #B3541E;
 $source-code-pro-font : 'Source Code Pro', monospace;
