--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,7 +11,7 @@ body {
     background-color: $navy;
     font-family: $source-code-pro-font;
     font-weight: 600;
-    font-size: 1rem;
+    font-size: 16px;
     line-height: 1.5rem;
     color: $white;
     text-decoration: none;
@@ -44,7 +44,7 @@ input[type=text] {
     border: none;
     font-family: $source-code-pro-font;
     font-weight: 400;
-    font-size: 1rem;
+    font-size: 16px;
     font-weight: 600;
 
     &:focus {
