Minor adjustments for lighthouse performance

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -134,10 +134,10 @@ input[type=text] {
 }
 
 
+
 @media screen and (max-width: 800px) {
 
-    .ascii,
-    #loading-ascii-art {
+    .ascii {
         font-size: 8px;
         line-height: 1.25;
 
