--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,7 @@ $lime-green : #32CD32;
 $white: #F7F7F7;
 $bright-blue: #0096FF;
 $bright-purple: #BF40BF;
-$navy : #00425A;
+$navy : #012f40;
 $orange : #FC7300;
 $yellow : #F8B400;
 $off-white : #F8F1F1;
