--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -121,7 +121,9 @@ input[type=text] {
     margin: 30px 0px;
 }
 
-
+.ascii-art, .ascii-art{
+    font-size: 16px;
+}
 
 // responsive media queries
 
@@ -138,8 +140,7 @@ input[type=text] {
 
 @media screen and (max-width: 800px) {
 
-    .ascii,
-    #loading-ascii-art {
+    .ascii, .ascii-art {
         font-size: 8px;
         line-height: 1.25;
 
