--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -121,10 +121,6 @@ input[type=text] {
     margin: 30px 0px;
 }
 
-.ascii-art, .ascii-art{
-    font-size: 16px;
-}
-
 // responsive media queries
 
 @media only screen and (max-width: 600px) {
@@ -136,6 +132,13 @@ input[type=text] {
         font-size: 0.75rem;
 
     }
+}
+
+
+.ascii,
+.ascii-art {
+    font-size: 16px;
+    line-height: 1.25;
 }
 
 @media screen and (max-width: 800px) {
