Random joke component

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,10 +4,11 @@ $bright-blue: #0096FF;
 $bright-purple: #BF40BF;
 $navy : #012f40;
 $orange : #FC7300;
-$yellow : #F8B400;
+$yellow : #FFDE00;
 $off-white : #F8F1F1;
 $teal : #125B50;
 $electric-green : #BFDB38;
 $pink-red: #FF6363;
 $brown : #B3541E;
+$pink : #F535AA;
 $source-code-pro-font : 'Source Code Pro', monospace;
