Minor style changes

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,7 +8,8 @@ $yellow : #FFDE00;
 $off-white : #F8F1F1;
 $teal : #125B50;
 $electric-green : #BFDB38;
-$pink-red: #FF6363;
+$pink-red: #FF4057;
 $brown : #B3541E;
 $pink : #F535AA;
+$turquoise-blue : #00f5d0;
 $source-code-pro-font : 'Source Code Pro', monospace;
