--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -112,6 +112,10 @@ input[type=text] {
     &-pink{
         color: $pink;
     }
+
+    &-turq-blue{
+        color: $turquoise-blue;
+    }
 }
 
 // projects.vue
