--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,8 @@
 $lime-green : #32CD32;
 $white: #F7F7F7;
-$bright-blue: #0096FF;
+$bright-blue: #0015fc;
 $bright-purple: #BF40BF;
-$navy : #012f40;
+$black : #151515;
 $orange : #FC7300;
 $yellow : #FFDE00;
 $off-white : #F8F1F1;
@@ -13,3 +13,5 @@ $brown : #B3541E;
 $pink : #F535AA;
 $turquoise-blue : #00f5d0;
 $source-code-pro-font : 'Source Code Pro', monospace;
+
+//525FE1
