Optimized scss and webkits for scrollbars

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 $lime-green : #32CD32;
 $white: #F7F7F7;
-$bright-blue: #0015fc;
+$bright-blue: #00a6f4;
 $bright-purple: #BF40BF;
 $black : #151515;
 $orange : #FC7300;
@@ -13,5 +13,3 @@ $brown : #B3541E;
 $pink : #F535AA;
 $turquoise-blue : #00f5d0;
 $source-code-pro-font : 'Source Code Pro', monospace;
-
-//525FE1
