--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -73,6 +73,11 @@ input[type="text"] {
     }
 }
 
+.intro-text{
+    font-style: italic;
+    font-weight: bold;
+    color: $pink-red;
+}
 
 
 .main {
