--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -168,11 +168,11 @@ input[type="text"] {
     margin: 30px 0px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
 
     body,
-    input[type="text"] {
-        font-size: 0.75rem;
+    input[type="text"], .intro-text {
+        font-size: 1rem;
     }
 }
 
