--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,5 +12,5 @@ $pink-red: #FF4057;
 $brown : #B3541E;
 $pink : #F535AA;
 $turquoise-blue : #00f5d0;
-$grey: #E4DCCF;
+$grey: #6c6c6c;
 $source-code-pro-font : 'Source Code Pro', monospace;
