--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,16 +1,12 @@
-$lime-green : #39FF14;
-$white: #F7F7F7;
-$bright-blue: #00a6f4;
-$bright-purple: #BF40BF;
-$black : #151515;
-$orange : #FC7300;
-$yellow : #FFDE00;
-$off-white : #F8F1F1;
-$teal : #125B50;
-$electric-green : #BFDB38;
-$pink-red: #FF4057;
-$brown : #B3541E;
-$pink : #F535AA;
-$turquoise-blue : #00f5d0;
-$grey: #6c6c6c;
 $source-code-pro-font : 'Source Code Pro', monospace;
+$background : #171717;
+$predicted-text-color : #7a7a7a;
+$incorrect-command-color : #F58E8E;
+$correct-command-color : #a9d3ab;
+$secondary-color : #D4D4D4;
+$prompt-color-1 : #a9d3ab;
+$prompt-color-2 : #fed37e;
+$main-border-color : #fed37e;
+$primary-color: #7aabd4;
+$content-heading-color: #d6add5;
+$green : #a9d3ab;
