Updated projects and colors

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,13 +7,13 @@
 $source-code-pro-font : 'Source Code Pro', monospace;
 $background : #171717;
 $predicted-text-color : #7a7a7a;
-$grey : #3d3d3d;
-$incorrect-command-color : #F58E8E;
-$correct-command-color : #78c97c;
-$secondary-color : #D4D4D4;
-$prompt-color-1 : #78c97c;
-$prompt-color-2 : #f8bf4c;
-$main-border-color : #f8bf4c;
+$grey : #808080;
+$incorrect-command-color : #ea6161;
+$correct-command-color : #33FF33;
+$secondary-color : #FFFFF0;
+$prompt-color-1 : #33FF33;
+$prompt-color-2 : #FFCC00;
+$main-border-color : #FFCC00;
 $primary-color: #4393d4;
 $content-heading-color: #d35dd1;
-$green : #78c97c;
+$green : #33FF33;
