--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,15 +5,15 @@
   }
 
 $source-code-pro-font : 'Source Code Pro', monospace;
-$background : #171717;
+$background : #09141b;
 $predicted-text-color : #7a7a7a;
 $grey : #808080;
-$incorrect-command-color : #ea6161;
-$correct-command-color : #33FF33;
-$secondary-color : #FFFFF0;
-$prompt-color-1 : #33FF33;
-$prompt-color-2 : #FFCC00;
-$main-border-color : #FFCC00;
+$incorrect-command-color : #d15123;
+$correct-command-color : #027c9b;
+$secondary-color : #deb88d;
+$prompt-color-1 : #fca02f;
+$prompt-color-2 : #027c9b;
+$main-border-color : #fca02f;
 $primary-color: #4393d4;
-$content-heading-color: #d35dd1;
-$green : #33FF33;
+$content-heading-color: #1bbcdd;
+$green : #fca02f;
